# MLOps_Vehicle_Insurance

./: .gitignore  LICENSE  README.md  app.py  crashcourse.txt  demo.py  play.py  project_workflow.txt  pyproject.toml  setup.py  template.py
config/: schema.yaml
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb  rf_model.pkl
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
